# smtp-connector

./: Cargo.toml  Connector.toml  README.md  sample-config.yaml
src/: config.rs  main.rs  record.rs  sink.rs
